tests/typec-test/test_out/if-statement.txt
error: type mismatch
 --> if-statement\root.ctl:4:8
  |
4 |     if 0 == 0 => 0
  |        ^^^^^^ mismatch occurred here
  |
  = info: expected 'bool' but got '()'

info: tir repr of functions:
 

